--- a/my-profile.html
+++ b/my-profile.html
@@ -68,29 +68,35 @@
       </div>
     </div>
     <div class="container-fluid col-md-6 mt-6">
-      <form>
+      <form id="formuse">
         <div class="row">
-          <div class="col-6 mb-3">
+          <div class="col-6 mb-3 formcontrolvalidationuse">
             <input type="text" id="nombre" class="form-control" placeholder="Nombre">
+            <p></p>
           </div>
-          <div class="col-6">
+          <div class="col-6 formcontrolvalidationuse">
             <input type="text" id="apellido" class="form-control" placeholder="Apellido">
+            <p></p>
           </div>
         </div>
         <div class="row">
-          <div class="col-6 mb-3">
+          <div class="col-6 mb-3 formcontrolvalidationuse">
             <input type="text" id="segundonombre" class="form-control" placeholder="Segundo Nombre">
+            <p></p>
           </div>
-          <div class="col-6">
+          <div class="col-6 formcontrolvalidationuse">
             <input type="text" id="segundoapellido" class="form-control" placeholder="Segundo Apellido">
+            <p></p>
           </div>
         </div>
         <div class="row">
-          <div class="col-6 mb-3">
-            <input type="text" id="email" class="form-control" placeholder="E-mail">
+          <div class="col-6 mb-3 formcontrolvalidationuse">
+            <input type="email" id="email" class="form-control" placeholder="E-mail">
+            <p></p>
           </div>
-          <div class="col-6">
-            <input type="text" id="contacto" class="form-control" placeholder="Telefono de contacto">
+          <div class="col-6 formcontrolvalidationuse">
+            <input type="number" id="contacto" class="form-control" placeholder="Telefono de contacto">
+            <p></p>
           </div>
           <div class="form-group">
             <div class="col-6 mb-3">
