--- a/my-profile.html
+++ b/my-profile.html
@@ -24,6 +24,14 @@
       color: red;
     }
 
+    #contacto[type=number]::-webkit-inner-spin-button, 
+    #contacto[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+#contacto[type=number] { -moz-appearance:textfield; }
+
     @media (min-width: 768px) {
       .bd-placeholder-img-lg {
         font-size: 3.5rem;
@@ -71,36 +79,42 @@
       <form id="formuse">
         <div class="row">
           <div class="col-6 mb-3 formcontrolvalidationuse">
+            <label for="">Nombre</label> <br>
             <input type="text" id="nombre" class="form-control" placeholder="Nombre">
             <p></p>
           </div>
           <div class="col-6 formcontrolvalidationuse">
+            <label for="">Apellido</label> <br>
             <input type="text" id="apellido" class="form-control" placeholder="Apellido">
             <p></p>
           </div>
         </div>
         <div class="row">
           <div class="col-6 mb-3 formcontrolvalidationuse">
+            <label for="">Segundo Nombre</label> <br>
             <input type="text" id="segundonombre" class="form-control" placeholder="Segundo Nombre">
             <p></p>
           </div>
           <div class="col-6 formcontrolvalidationuse">
+            <label for="">Segundo Apellido</label> <br>
             <input type="text" id="segundoapellido" class="form-control" placeholder="Segundo Apellido">
             <p></p>
           </div>
         </div>
         <div class="row">
           <div class="col-6 mb-3 formcontrolvalidationuse">
+            <label for="">Correo Electronico</label> <br>
             <input type="email" id="email" class="form-control" placeholder="E-mail">
             <p></p>
           </div>
           <div class="col-6 formcontrolvalidationuse">
+            <label for="">Telefono/Celular</label> <br>
             <input type="number" id="contacto" class="form-control" placeholder="Telefono de contacto">
             <p></p>
           </div>
           <div class="form-group">
             <div class="col-6 mb-3">
-              <label for="exampleFormControlFile1"></label>
+             
             </div>
             <div class="col">
               <input type="file" id="inputPhoto" onchange="newPhoto()" class="form-control-file2" id="exampleFormControlFile1" >
